<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_playlists"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.gaudio.Playlists">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/playing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/category_playing"
                style="@style/category_style"/>

            <TextView
                android:id="@+id/songs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/category_songs"
                style="@style/category_style"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/category_playlists"
                style="@style/category_style"/>

            <TextView
                android:id="@+id/store"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/category_store"
                style="@style/category_style"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/explanation_playlist"
                android:paddingBottom="@dimen/element_space"
                style="@style/explanation_style"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/element_space"
                android:layout_marginLeft="@dimen/app_margin"
                android:layout_marginRight="@dimen/app_margin">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    tools:ignore="ContentDescription"
                    android:src="@drawable/audio"
                    android:id="@+id/imageView2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/playlist_1"
                    style="@style/element_style"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/element_space"
                android:layout_marginLeft="@dimen/app_margin"
                android:layout_marginRight="@dimen/app_margin">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    tools:ignore="ContentDescription"
                    android:src="@drawable/audio" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/playlist__2"
                    style="@style/element_style"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/element_space"
                android:layout_marginLeft="@dimen/app_margin"
                android:layout_marginRight="@dimen/app_margin">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    tools:ignore="ContentDescription"
                    android:src="@drawable/audio" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/playlist__3"
                    style="@style/element_style"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/element_space"
                android:layout_marginLeft="@dimen/app_margin"
                android:layout_marginRight="@dimen/app_margin">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    tools:ignore="ContentDescription"
                    android:src="@drawable/audio" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/playlist__4"
                    style="@style/element_style"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/element_space"
                android:layout_marginLeft="@dimen/app_margin"
                android:layout_marginRight="@dimen/app_margin">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    tools:ignore="ContentDescription"
                    android:src="@drawable/audio" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/playlist__5"
                    style="@style/element_style"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
