<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.android.gaudio.MainActivity"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/music"
        android:layout_below="@+id/menu_playing"
        android:text="@string/explanation_play"
        android:textColor="@color/colorPrimary"
        style="@style/explanation_style"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@+id/progress_bar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Artist"
            style="@style/track_style"
            android:textStyle="italic"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Track"
            style="@style/track_style"
            android:textStyle="bold"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:max="100"
        android:progress="40"
        android:paddingLeft="@dimen/app_margin"
        android:paddingRight="@dimen/app_margin"
        android:layout_above="@+id/play_and_turbo" />

    <LinearLayout
        android:id="@+id/play_and_turbo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/app_margin"
        android:paddingRight="@dimen/app_margin"
        android:layout_above="@+id/star_and_shuffle">
        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/fast_forward"
            tools:ignore="ContentDescription"/>

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/play"
            tools:ignore="ContentDescription"/>

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/rewind"
            tools:ignore="ContentDescription"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/star_and_shuffle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/app_margin"
        android:paddingRight="@dimen/app_margin"
        android:paddingBottom="@dimen/header_space"
        android:layout_alignParentBottom="true">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/star"
                tools:ignore="ContentDescription"/>

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/shuffle"
                tools:ignore="ContentDescription"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_playing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/category_playing"
            style="@style/category_style"/>

        <TextView

            android:id="@+id/songs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/category_songs"
            style="@style/category_style"/>

        <TextView

            android:id="@+id/playlists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/category_playlists"
            style="@style/category_style"/>

        <TextView

            android:id="@+id/store"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/category_store"
            style="@style/category_style"/>
    </LinearLayout>
</RelativeLayout>
